data/derived/comb/progs/unify/prog6219.ml.out
Characters 127-129:
  ((sum/10)::a1,(sum mod 10)::a2) in
             ^^
Error: This expression has type int but an expression was expected of type
         int list
